docs/api/qiskit/0.39/qiskit.circuit.library.CSGate.mdx
---
title: CSGate
description: API reference for qiskit.circuit.library.CSGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CSGate
---

# CSGate

<Class id="qiskit.circuit.library.CSGate" github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/circuit/library/standard_gates/s.py" signature="CSGate(label=None, ctrl_state=None)">
  Bases: [`qiskit.circuit.controlledgate.ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

  Controlled-S gate.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`cs()`](qiskit.circuit.QuantumCircuit#cs "qiskit.circuit.QuantumCircuit.cs") method.

  **Circuit symbol:**

  ```python
  q_0: ──■──
       ┌─┴─┐
  q_1: ┤ S ├
       └───┘
  ```

  **Matrix representation:**

  $$
  \begin{split}CS \ q_0, q_1 =
  I \otimes |0 \rangle\langle 0| + S \otimes |1 \rangle\langle 1|  =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & 1 & 0 & 0 \\
          0 & 0 & 1 & 0 \\
          0 & 0 & 0 & i
      \end{pmatrix}\end{split}
  $$

  Create new CS gate.

  ## Methods Defined Here

  ### inverse

  <Function id="qiskit.circuit.library.CSGate.inverse" name="inverse" signature="CSGate.inverse()">
    Return inverse of CSGate (CSdgGate).
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.CSGate.condition_bits" name="condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CSGate.ctrl_state" name="ctrl_state">
    Return the control state of the gate as a decimal integer.

    **Return type**

    `int`
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CSGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CSGate.definition" name="definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

    **Return type**

    `List`
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CSGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CSGate.label" name="label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CSGate.name" name="name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

    **Return type**

    `str`
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.CSGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CSGate.num_ctrl_qubits" name="num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    int
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.CSGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CSGate.params" name="params">
    Get parameters from base\_gate.

    **Returns**

    List of gate parameters.

    **Return type**

    list

    **Raises**

    **CircuitError** – Controlled gate does not define a base gate
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.CSGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>
</Class>

